--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,14 @@
 }
 
 body {
-  background: linear-gradient(
+  /* background: linear-gradient(
     90deg,
     rgba(48, 16, 255, 1) 0%,
     rgba(100, 115, 255, 1) 100%
-  );
+  ); */
+  background-image: url('./led.gif');
+  background-size: cover;
+
 }
 .todo-app {
   display: flex;
