--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,20 @@ h1 {
   color: #fff;
 }
 
-.todo-input::placeholder {
+.todo-input::placeholder, .todo-input-quantity {
   color: #e2e2e2;
+}
+.todo-input-quantity {
+  border-radius: 4px;
+  border: 2px solid #5d0cff;
+  outline: none;
+  background: transparent;
+  color: #fff;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 10px;
+  width: 70px;
+  margin-right: 15px;
 }
 
 .todo-button {
